# enterprise-rag-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 032ed5254a6b_add_tsv_to_document_chunks.py  3683b2666266_add_refresh_tokens.py  47b3df526ee9_add_expected_document_ids_to_golden_set.py  49db97577151_add_chunk_config_fields.py  57e5f117ed52_add_golden_set_questions.py  7823bfdbe9e1_add_experiment_runs.py  86d590b3e79c_initial_schema.py  87be64e25f76_add_experiment_latency_fields.py  a916dd2d88ab_add_answer_evaluation_runs.py  ea7d20da4cf7_add_retrieved_chunks_log.py  f6738dc00eb9_add_ragas_evaluation_runs.py
app/: main.py
app/application/use_cases/: hybrid_search.py  index_embeddings.py  ingest_documents.py  ingest_records.py  keyword_search.py  log_query.py  rerank_results.py  run_answer_evaluation.py  run_experiments.py  run_ragas_evaluation.py  run_retrieval_evaluation.py  semantic_search.py
app/core/: config.py  constants.py  exceptions.py  responses.py  security.py  token_estimator.py
app/evaluation/metrics/: retrieval_metrics.py
app/infrastructure/db/: session.py
app/infrastructure/embeddings/: provider.py
app/infrastructure/llm/: provider.py
app/infrastructure/parsing/: text_extractors.py
app/schemas/: auth.py  common.py  document.py  evaluation.py  experiment.py  ingestion.py  query.py  retrieval.py  session.py
enterprise_rag_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_chunker.py  test_health.py  test_token_estimator.py
(+33 files in other folders)
